--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -2,7 +2,7 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TeamController!{% endblock %}
+{% block title %}Team{% endblock %}
 
 {% block body %}
     <div class="container" x-data="teams()" x-init="retrieveTeam()" style="padding-top: 20px">
@@ -22,9 +22,9 @@
                 <thead>
                 <tr>
                     <th scope="col">Name</th>
-                    <th scope="col">Country</th>
-                    <th scope="col">Acount balance</th>
-                    <th scope="col"><span class="float-end">Action</span></th>
+                    <th scope="col" >Country</th>
+                    <th scope="col" style="width: 20%">Acount balance</th>
+                    <th scope="col" style="width: 25%"><span class="float-end">Action</span></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -37,13 +37,16 @@
                             <div class="hidden-sm hidden-xs btn-group float-end">
                                 <a class="btn btn-sm btn-outline-primary" x-bind:href="baseUri + team.id">
                                     <i class="ace-icon fa fa-eye bigger-120"></i>
+                                    &nbsp;Show
                                 </a>
                                 <button class="btn btn-sm btn-outline-secondary" @click="editTeam(team.id)">
                                     <i class="ace-icon fa fa-edit bigger-120"></i>
+                                    &nbsp;Edit
                                 </button>
                                 <button class="btn btn-sm btn-outline-danger"
                                         @click="removeTeam(team.id)">
                                     <i class="ace-icon fa fa-close bigger-120"></i>
+                                    &nbsp;Remove
                                 </button>
                             </div>
                         </td>
