Fix last changes

--- a/templates/player/active.html.twig
+++ b/templates/player/active.html.twig
@@ -44,9 +44,9 @@
             </template>
             <template x-if="activePlayers.length === 0">
                 <tr>
-                    <td colspan="5">
+                    <td colspan="6">
                         <div class="alert alert-info text-center">
-                            There is no players in this team please add new :)
+                            There is no players please add new :)
                         </div>
                     </td>
                 </tr>
