--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -4,14 +4,20 @@
 
 {% block title %}Team{% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('teamsList') }}
+{% endblock %}
+
 {% block body %}
-    <div class="container" x-data="teams()" x-init="retrieveTeam()" style="padding-top: 20px">
+    <div class="container" x-data="teams('{{ path("api_team_list") }}','{{ path("app_team_index") }}')" x-init="retrieveTeam()" style="padding-top: 20px">
         <div class="row">
             <div class="col-sm-9">
                 <h3 x-text="headerTitle"></h3>
             </div>
             <div class="col-sm-3">
-                <button x-show="showList" type="button" class="btn btn-sm btn-outline-dark float-end" @click="createTeamForm()">
+                <button x-show="showList" type="button" class="btn btn-sm btn-outline-dark float-end"
+                        @click="createTeamForm()">
                     <i class="fa fa-plus"></i>
                     &nbsp;New team
                 </button>
@@ -22,7 +28,7 @@
                 <thead>
                 <tr>
                     <th scope="col">Name</th>
-                    <th scope="col" >Country</th>
+                    <th scope="col">Country</th>
                     <th scope="col" style="width: 20%">Acount balance</th>
                     <th scope="col" style="width: 25%"><span class="float-end">Action</span></th>
                 </tr>
@@ -67,14 +73,16 @@
             <nav aria-label="Page navigation example" x-show="pages > 1">
                 <ul class="pagination justify-content-center">
                     <li class="page-item" :class="{ 'disabled': actualPage === 1 }">
-                        <a class="page-link" href="#" x-on:click.prevent="retrieveTeam(actualPage-1)" aria-label="Previous">
+                        <a class="page-link" href="#" x-on:click.prevent="retrieveTeam(actualPage-1)"
+                           aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
                     <template x-for="pageNumber in pages" :key="pageNumber">
-                            <li class="page-item" :class="{ 'active': actualPage === pageNumber }">
-                                <a class="page-link" href="#" x-text="pageNumber" x-on:click.prevent="retrieveTeam(pageNumber)"></a>
-                            </li>
+                        <li class="page-item" :class="{ 'active': actualPage === pageNumber }">
+                            <a class="page-link" href="#" x-text="pageNumber"
+                               x-on:click.prevent="retrieveTeam(pageNumber)"></a>
+                        </li>
 
                     </template>
                     <li class="page-item" :class="{ 'disabled': actualPage === pages }">
